# Geometry

./: .gitignore  CMakeLists.txt
Geometory/chapter1/: Point.cpp
include/glad/: glad.h
openGL/: CMakeLists.txt  Data Targets Copying.xml  openGL buffer.xml  tessellation.xml
openGL/include/: Application.h  PointApp.h  Utils.h  vmath.h
openGL/src/: Application.cpp  Main.cpp  glad.c  helloWindowApp.cpp
openGL/src/1.Getting_Started/: BufferApp.cpp  CMakeLists.txt  PointApp.cpp  TessellationApp.cpp  TriangleApp.cpp  helloWindow.cpp
openGL/src/2.Data/: BufferApp.cpp  CMakeLists.txt  LayoutApp.cpp  UniformApp.cpp  UniformBlockApp.cpp
openGL/src/3.Texture/: CMakeLists.txt  ComplexTextureApp.cpp  CompressTextureApp.cpp  MipMapTextureApp.cpp  SimpleTextureApp.cpp  TexturePlayApp.cpp
openGL/src/4.Shader_Programs/: CMakeLists.txt  SeparateModeApp.cpp  StatusApp.cpp  SubroutineApp.cpp
openGL/src/5.Vertex_Pro/: CMakeLists.txt  PointInstApp.cpp  PointInstPriApp.cpp  TriangleStripApp.cpp  VertexFeedbackApp.cpp  VertexInputApp.cpp
openGL/src/include/: Application.h
src/1.Getting_Started/: helloWindow.cpp
